# rust-lazyrand

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  xorshift.rs  xoshiro256pp.rs
test_wasm/: Cargo.toml  README.md  index.html  wasm_build.sh
test_wasm/src/: lib.rs
