[package]
name = "lazyrand"
version = "0.1.7"
edition = "2021"
authors = ["kujirahand<web@kujirahand.com>"]
description = "It is a simple library for generating random numbers easily."
license = "MIT"
repository = "https://github.com/kujirahand/rust-lazyrand"
keywords = ["rand", "random", "xorshift"]
categories = ["algorithms"]

[dependencies]
once_cell = "1.17.1"
